# GSI-chatbot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  README.md  amplify.yml  pyproject.toml
.cursor/: settings.json
.github/workflows/: deploy-api.yml
data/videos/: transcripts.json
deploy/: ecs-task-definition.json
eval/: citation_eval.jsonl  questions.jsonl  run_citation_eval.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  ChatApp.jsx  api.js  auth.js  index.css
frontend/src/components/: ChatSidebar.jsx  LandingPage.jsx  LoginPanel.jsx
scripts/: fix_astm_designations.py  ingest_astm.py  ingest_gri.py  ingest_video_transcripts.py  youtube_pull.py  youtube_pull_ytdlp.py
src/standards_rag/: __init__.py  answer_prompts.py  api.py  auth.py  chat.py  citation_validation.py  cli.py  conversation_store.py  env_bootstrap.py  ingestion.py  models.py  openai_answer.py  pinecone_hybrid.py  retrieval.py  units.py  video.py
tests/: test_auth.py  test_citation_validation.py  test_conversation_store.py  test_standards_rag.py  test_video.py
